<resources>
    <string name="app_name">Get to Know Me</string>
    <string name="name_pamela_jane_t_babejes_age_19_years_old_birthday_january_24_2004_place_of_birth_daet_camarines_norte_mother_cecil_t_babejes_father_rey_s_babejes">Name: Pamela Jane T. Babejes Age: 19 years old Birthday: January 24, 2004 Place of Birth: Daet, Camarines Norte Mother: Cecil T. Babejes Father: Rey S. Babejes</string>
    <string name="address_block_16_lot_4_rosal_street_fairview_3_subdivision_brgy_magang_daet_camarines_norte">Address: Block 16 Lot 4 Rosal Street Fairview 3 Subdivision Brgy. Magang Daet, Camarines Norte</string>
    <string name="name_pamela_jane_t_babejes">Name: Pamela Jane T. Babejes</string>
    <string name="age_19_years_old">Age: 19 years old</string>
    <string name="birthday_january_24_2004">Birthday: January 24, 2004</string>
    <string name="todo">TODO</string>
    <string name="family_background">Family Background</string>
    <string name="place_of_birth_daet_camarines_norte">Place of birth: Daet, Camarines Norte</string>
    <string name="siblings_reyn_anthon_t_babejes">Siblings: Reyn Anthon T. Babejes</string>
    <string name="rei_zeus_t_babejes">Rei Zeus T. Babejes</string>
    <string name="parents_cecil_t_babejes">Parents: Cecil T. Babejes</string>
    <string name="rey_s_babejes">Rey S. Babejes</string>
    <string name="religion_born_again_christian">Religion: Born Again Christian</string>
    <string name="status_single">Status: Single</string>
    <string name="todo2">TODO</string>
    <string name="bachelor_of_science_in_information_technology_bsit_2_a">Bachelor of Science in Information Technology (BSIT 2-A)</string>
    <string name="camarines_norte_state_college">Camarines Norte State College</string>
    <string name="college">College:</string>
    <string name="camarines_norte_national_high_school">Camarines Norte National High School</string>
    <string name="camarines_norte_senior_high_school">Camarines Norte Senior High School</string>
    <string name="senior_high_school">Senior High School:</string>
    <string name="high_school">High School:</string>
    <string name="grade_5_grade_6">(Grade 5 - Grade 6)</string>
    <string name="daet_elementary_school">Daet Elementary School</string>
    <string name="day_care_grade_4">(Day Care - Grade 4)</string>
    <string name="elementary_pambuhan_elementary_school">Elementary: Pambuhan Elementary School</string>
    <string name="school_background">School Background</string>
    <string name="quot_what_belongs_to_me_will_find_its_way_to_me_quot">\"What belongs to me will find its way to me.\"</string>
    <string name="mantra">Mantra:</string>
    <string name="dream_job_architect">Dream Job: Architect</string>
    <string name="favourite_food_filipino_dish_ice_cream">Favourite Food: Filipino Dish, Ice cream</string>
    <string name="favourite_artist_post_malone_doja_cat_r_b"><![CDATA[Favourite artist: Post Malone, Doja Cat, R&B]]></string>
    <string name="music_hip_hop_rap">Music: Hip-Hop, Rap</string>
    <string name="hobby_reading">Hobby: Reading</string>
    <string name="interesting_facts_about_me">Interesting Facts About Me</string>
</resources>