<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".secondscreen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:fontFamily="cursive"
        android:text="@string/name_pamela_jane_t_babejes"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="309dp"
        android:layout_height="60dp"
        android:fontFamily="cursive"
        android:text="@string/age_19_years_old"
        android:textAlignment="textStart"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:fontFamily="cursive"
        android:text="@string/birthday_january_24_2004"
        android:textAlignment="textStart"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="303dp"
        android:layout_height="128dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="cursive"
        android:text="@string/address_block_16_lot_4_rosal_street_fairview_3_subdivision_brgy_magang_daet_camarines_norte"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/acts"
        android:layout_width="167dp"
        android:layout_height="88dp"
        android:background="#00504848"
        android:contentDescription="@string/todo"
        android:rotationX="4"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/act" />


</androidx.constraintlayout.widget.ConstraintLayout>